[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "podsearch"
author = "arron"
author-email = "m@kk.org"
home-page = "https://github.com/nalgeon/podsearch-py"
classifiers = [ "License :: OSI Approved :: MIT License",]

description-file = "README.md"
requires-python = ">=3.7"